<resources>
    <string name="app_name">Tourist Guide</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_monuments">Monuments</string>
    <string name="title_favorite">Favorites</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_label">Scan the QR code on the poster and see further informations about monuments</string>
    <string name="map">Shfleto Vendet Kulturore</string>
    <string name="qr_code">Skano QR Code\n</string>
    <string name="about_project">Ky aplikacion eshte një zgjidhje e mire për shumë turistë të cilët kanë kohë të limituar dhe ju
duhet të përzgjedhin vetëm vendet që ju duken më atraktive. Zakonishtë këtë përzgjedhje e bëjnë
perms web-faqeve dhe librave guide, mirëpo një aplikacion mobil që do të siguronte informata të
vlefshme për turistët do të ishte më I dobishëm dhe praktik.</string>


    <string name="unique_number">Unique number</string>
    <string name="name">Name</string>
    <string name="detail_class">Class</string>
    <string name="detail_type">Type</string>
    <string name="detail_period">Period</string>
    <string name="deatil_century">Century</string>
    <string name="detail_history">History</string>
    <string name="get_directions">Get Directions</string>
    <string name="title_detail_activity">Detail Activity</string>

    <!--Google Maps credentials-->
    <string name="google_maps_key">AIzaSyAWan2_YB4NDfS3fgc1ZYsbhYZXUM8YPwI</string>
    <!--These two strings are not needed in the app, just saved them in case I need to
    make modifications to Google Maps API Restrictions
    CD to jdk directory when using CMD, then enter the cmd_line to get SHA-1 key-->
    <string name="sha_1_key">31:4B:08:5A:C8:D5:2A:44:D7:16:E7:79:C4:52:82:94:2B:E6:0F:EF</string>
    <string name="cmd_line">keytool -list -v -keystore c:(insert backslash)users\alimorina\.android\debug.keystore -alias androiddebugkey -storepass android -keypass android</string>
    <string name="google_maps_missing_title">Google Maps is missing!</string>
    <string name="google_maps_missing_message">Google Maps is required to get directions for the desired location. Press OK if you want to install Google Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
