<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_navigation_scan"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_monuments"
        android:icon="@drawable/ic_navigation_monuments"
        android:title="@string/title_monuments" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_navigation_favorite"
        android:title="@string/title_favorite" />

</menu>
